# desktop-agent

./: package-lock.json  package.json  tailwind.config.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: docker.rs  mod.rs  sys_info.rs
src/components/Core/: ContentWindow.tsx  Sidebar.tsx  StatusBar.tsx
src/components/Layout/: TitleBarSeparator.tsx
src/components/Pages/: ContentMapping.tsx
src/components/Pages/About/: AboutPage.tsx
src/components/Pages/Home/: HomePage.tsx
src/components/Pages/Settings/: SettingsPage.tsx
src/components/Pages/SystemOverview/: SystemOverviewPage.tsx  systemInfoTypes.ts
src/components/Pages/SystemOverview/Sections/: CpuSection.tsx  GpuSection.tsx  MemorySection.tsx  NetworkSection.tsx  OperatingSystemSection.tsx  PerformanceSection.tsx  StorageSection.tsx
src/components/Pages/SystemOverview/UI/: InfoCard.tsx  InfoRow.tsx
src/components/UI/Sidebar/: SidebarItem.tsx  SidebarNavigation.tsx
src/components/UI/Sidebar/Items/: AboutItem.tsx  HomeItem.tsx  SettingsItem.tsx  SystemOverviewItem.tsx
src/components/UI/StatusBar/: StatusBarManager.tsx  StatusItem.tsx
src/components/UI/StatusBar/Items/: AppVersionStatus.tsx  DockerStatus.tsx
