[package]
name = "desktop-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
# Tauri plugin for opening URLs/files
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1.0"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Docker monitoring
bollard = "0.19.1"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12.20", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# System information
sysinfo = { version = "0.35", features = ["serde"] }

# Windows-specific
winreg = "0.53"

# NVIDIA GPU monitoring
nvml-wrapper = "0.11.0"

# Network speed testing (for future implementation)
speedtest-rs = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

